# Extensional-Agent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
examples/: __init__.py  agent_with_thinking.py  message_consumer.py  persistent_consumer.py  virtual_consumer.py
extensional_agent/: __init__.py  agent_base.py  agent_sdk.py  message_consumer.py  py.typed  registry.py  runner.py  schemas.py
extensional_agent/examples/: agent_with_thinking.py  message_consumer.py  persistent_consumer.py  virtual_consumer.py
